--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 <body>
     <header class="container-fluid header">
-        <section class="pre-header d-flex justify-content-center pt-2">
+        <section class="container-fluid pre-header d-flex justify-content-center pt-2">
             <i class="bi bi-telephone me-3"></i>
             <p class="info">8 (812) 123-45-67 | Працюємо 7 днів на тиждень | 9:00 — 18:00</p>
             <i class="bi bi-box-arrow-in-right me-3"></i>
             <p class="login">Вхід / Реєстрація</p>
         </section>
 
-        <div class="container d-flex">
-            <a href="#" class="logo my-auto">PORTEN</a>
+        <div class="container d-flex col-md-10">
             <nav class="navbar navbar-expand-lg">
+                <a href="#" class="logo my-auto">PORTEN</a>
                 <ul class="navbar-nav">
                     <li class="nav-item active align-self-center">сподобалось</li>
                     <li class="nav-item">Особистий кабінет</li>
@@ -40,6 +40,7 @@
             <i class="bi bi-search align-self-center icon"></i>
         </div>
     </header>
+
     <main>
         <section class="hero">
 
@@ -55,71 +56,78 @@
             </p>
         </section>
 
-        <div class="row">
-            <section class="container new-seson col-7">
-                <h2 class="section-title">СЕЗОН 2021/22</h2>
+        <div class="container-fluid px-3">
+            <div class="row">
+                <section class="container new-seson col-md-7 col-sm-12">
+                    <h2 class="section-title">СЕЗОН 2021/22</h2>
 
-                <div class="container">
-                    <ul class="container d-flex">
-                        <li class="new-seson-item">
-                            <div class="new-seson-img-wraper">
-                                <img src="./img/new-clock1.png" alt="clock 1">
-                            </div>
-                            <p>Louis XVI ATHOS</p>
-                            <p>13 600 грн.</p>
-                            </img>
-                        </li>
-                        <li class="new-seson-item">
-                            <div class="new-seson-img-wraper">
-                                <img src="./img/new-clock2.png" alt="clock 1">
-                            </div>
-                            <p>Carl von Zeyten</p>
-                            <p>Carl von Zeyten</p>
-                            </img>
-                        </li>
-                        <li class="new-seson-item">
-                            <div class="new-seson-img-wraper">
-                                <img src="./img/new-clock3.png" alt="clock 1">
-                            </div>
-                            <p>JORD AR5905</p>
-                            <p>65 000 грн.</p>
-                            </img>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                    <div class="container">
+                        <ul class="row">
+                            <li class="new-seson-item col-md-4 col-sm-10">
+                                <div class="new-seson-img-wraper">
+                                    <img src="./img/new-clock1.png" alt="clock 1">
+                                </div>
+                                <p>Louis XVI ATHOS</p>
+                                <p>13 600 грн.</p>
+                                </img>
+                            </li>
+                            <li class="new-seson-item col-md-4 col-sm-10">
+                                <div class="new-seson-img-wraper">
+                                    <img src="./img/new-clock2.png" alt="clock 1">
+                                </div>
+                                <p>Carl von Zeyten</p>
+                                <p>Carl von Zeyten</p>
+                                </img>
+                            </li>
+                            <li class="new-seson-item col-md-4 col-sm-10">
+                                <div class="new-seson-img-wraper">
+                                    <img src="./img/new-clock3.png" alt="clock 1">
+                                </div>
+                                <p>JORD AR5905</p>
+                                <p>65 000 грн.</p>
+                                </img>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
 
-            <section class="container new-colection col-5">
-                <div class="container new-colection-wraper">
-                    <h2 class="section-title">Нова колекція</h2>
-                    <a class="new-colection-link" href="#">Каталог</a>
-                </div>
-            </section>
+                <section class="container new-colection col-md-5 col-sm-12">
+                    <div class="container new-colection-wraper pb-5">
+                        <h2 class="section-title">Нова колекція</h2>
+                        <a class="new-colection-link" href="#">Каталог</a>
+                    </div>
+                </section>
+            </div>
         </div>
 
 
         <section class="container-fluid old-colection d-flex justify-content-center">
             <img class="col-5" src="./img/old-colection-img.webp" alt="fashion man">
             <div class="container old-colection-wraper">
-                <h2 class="section-title">колекція 2018</h2>
-                <p class="old-colection-text">Годинники як інструмент визначення часу давно і надійно прижилися в
-                    людській
-                    реальності. Романтики та
-                    прагматики, художники та бізнесмени, чоловіки та жінки, дорослі та діти - всі хочуть знати котра
-                    година
-                    в потрібний момент. Скільки хвилин пройшло, скільки залишилося, а ще - які саме моделі і якого
-                    бренду
-                    виблискують на руці у друга, коханої або конкурента. З давніх часів, коли людина здогадався втикнути
-                    в
-                    землю паличку та іншою поличкою взявся відміряти рівні проміжки часу на піску, не вщухають суперечки
-                    -
-                    яким повинний бути годинник? Наручним, або настільним, або настінним, або, нарешті, підлоговим? Чому
-                    ж
-                    кожен діамантик на безеле або шестерінка в механізмі незмінно змушують гордовито випнутися нижню
-                    губу
-                    володаря аксесуара, а щоки - роздутися?</p>
+                <div class="row justify-content-center">
+                    <h2 class="section-title">колекція 2018</h2>
+                    <p class="old-colection-text">Годинники як інструмент визначення часу давно і надійно прижилися в
+                        людській
+                        реальності. Романтики та
+                        прагматики, художники та бізнесмени, чоловіки та жінки, дорослі та діти - всі хочуть знати котра
+                        година
+                        в потрібний момент. Скільки хвилин пройшло, скільки залишилося, а ще - які саме моделі і якого
+                        бренду
+                        виблискують на руці у друга, коханої або конкурента. З давніх часів, коли людина здогадався
+                        втикнути
+                        в
+                        землю паличку та іншою поличкою взявся відміряти рівні проміжки часу на піску, не вщухають
+                        суперечки
+                        -
+                        яким повинний бути годинник? Наручним, або настільним, або настінним, або, нарешті, підлоговим?
+                        Чому
+                        ж
+                        кожен діамантик на безеле або шестерінка в механізмі незмінно змушують гордовито випнутися нижню
+                        губу
+                        володаря аксесуара, а щоки - роздутися?</p>
 
-                <a class="old-colection-link" href="#">переглянути колекцію</a>
+                    <a class="old-colection-link col-md-3" href="#">переглянути колекцію</a>
+                </div>
             </div>
         </section>
 
@@ -128,43 +136,43 @@
             <h2 class="section-title">Нові надходження</h2>
 
             <ul class="container row new-product-list">
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock2.png" alt="new-clock" width="215" height="234">
                     <p>Carl von Zeyten</p>
                     <p>16 500 грн.</p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock3.png" alt="new-clock" width="215" height="234">
                     <p>JORD AR5905</p>
                     <p>65 000 грн.</p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock4.png" alt="new-clock" width="215" height="234">
                     <p>Emporio Armani Sportivo </p>
                     <p>165 000 грн.</p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock5.png" alt="new-clock" width="215" height="234">
                     <p>Rolex Oyster Perpetual</p>
                     <p>280 000 грн.</p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock1.png" alt="new-clock" width="215" height="234">
                     <p>Louis XVI ATHOS</p>
                     <p>65 000 грн. </p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock6.png" alt="new-clock" width="215" height="234">
                     <p>U-Boat Italo Fontana</p>
                     <p>18 700 грн. </p>
                 </li>
-                <li class=" col-3 new-product">
+                <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock7.png" alt="new-clock" width="215" height="234">
                     <p>Gucci Men's G</p>
                     <p>38 500 грн.</p>
                 </li>
 
-                <li class="col-3 new-product new-product-wrap">
+                <li class="col-md-3 col-sm-10 new-product new-product-wrap">
                     <div class="container new-product-link-wrap">
                         <a class="new-products-link" href="">ПОКАЗАТИ ВСІ</a>
                     </div>
@@ -252,7 +260,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <h3 class="footer-section-title">про компанію</h3>
                     <p class="footer-section-text">Компанія PORTEN – лідер на українському ринку годинників. На цей час
                         ми об'єднуємо більше сорока
@@ -268,7 +276,7 @@
                         SWAROVSKI и CHRISTINA.</p>
                 </div>
 
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
                         <ul class="row">
@@ -284,7 +292,7 @@
                     </div>
                 </div>
 
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="container">
                         <h3 class="footer-section-title">розсилка</h3>
                         <p class="footer-section-text">Компанія пропонує тільки оригінальну продукцію від найвідоміших
