--- a/index.html
+++ b/index.html
@@ -21,23 +21,33 @@
 <body>
     <header class="container-fluid header">
         <section class="container-fluid pre-header d-flex justify-content-center pt-2">
-            <i class="bi bi-telephone me-3"></i>
-            <p class="info">8 (812) 123-45-67 | Працюємо 7 днів на тиждень | 9:00 — 18:00</p>
-            <i class="bi bi-box-arrow-in-right me-3"></i>
-            <p class="login">Вхід / Реєстрація</p>
+            <div class="container d-flex row">
+                <div class="d-flex col-md-10">
+                    <i class="bi bi-telephone me-3"></i>
+                    <p class="info">8 (812) 123-45-67 | Працюємо 7 днів на тиждень | 9:00 — 18:00</p>
+                </div>
+                <div class="d-flex col-md-2">
+                    <i class="bi bi-box-arrow-in-right me-3"></i>
+                    <p class="login">Вхід / Реєстрація</p>
+                </div>
+            </div>
         </section>
 
-        <div class="container d-flex col-md-10">
-            <nav class="navbar navbar-expand-lg">
-                <a href="#" class="logo my-auto">PORTEN</a>
-                <ul class="navbar-nav">
-                    <li class="nav-item active align-self-center">сподобалось</li>
-                    <li class="nav-item">Особистий кабінет</li>
-                    <li class="nav-item">налаштування</li>
-                </ul>
-            </nav>
-            <i class="bi bi-cart2 align-self-center icon me-5"></i>
-            <i class="bi bi-search align-self-center icon"></i>
+        <div class="container d-flex">
+            <div class="row">
+                <nav class="navbar navbar-expand-lg col-md-11">
+                    <a href="#" class="logo my-auto">PORTEN</a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active align-self-center">сподобалось</li>
+                        <li class="nav-item">Особистий кабінет</li>
+                        <li class="nav-item">налаштування</li>
+                    </ul>
+                </nav>
+                <div class="container d-flex col-md-1">
+                    <i class="bi bi-cart2 align-self-center icon me-5"></i>
+                    <i class="bi bi-search align-self-center icon"></i>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -48,7 +58,8 @@
                 <h1 class="hero-title">PORTEN</h1>
                 <p class="hero-city">івано-франківськ</p>
             </div>
-            <p class="hero-text">В магазинах Торговельній мережі Porten ви можете купити годинник у Бахмуті, Вінниці,
+            <p class="hero-text px-sm-5">В магазинах Торговельній мережі Porten ви можете купити годинник у Бахмуті,
+                Вінниці,
                 Дніпрі, Житомирі,
                 Запоріжжі, Івано-Франківську, Києві, Краматорську, Луцьку, Львові, Одесі, Покровську, Полтаві, Рівному,
                 Слов'янську, Сумах, Тернополі, Харкові, Херсоні, Хмельницькому, Черкасах, Чернівцях, Чернігові , а також
