--- a/index.html
+++ b/index.html
@@ -142,11 +142,10 @@
             </div>
         </section>
 
-
         <section class="new-products">
             <h2 class="section-title">Нові надходження</h2>
 
-            <ul class="container row new-product-list">
+            <!-- <ul class="container row new-product-list">
                 <li class=" col-md-3 col-sm-10 new-product">
                     <img src="./img/new-clock2.png" alt="new-clock" width="215" height="234">
                     <p>Carl von Zeyten</p>
@@ -188,7 +187,56 @@
                         <a class="new-products-link" href="">ПОКАЗАТИ ВСІ</a>
                     </div>
                 </li>
-            </ul>
+            </ul> -->
+
+            <div class="table-responsive-md">
+                <table class="table">
+                    <tbody class="container new-product-list">
+                        <tr>
+                            <td class="new-product">
+                                <img src="./img/new-clock2.png" alt="new-clock" width="215" height="234">
+                                <p>Carl von Zeyten</p>
+                                <p>16 500 грн.</p>
+                            </td>
+                            <td class="new-product">
+                                <img src="./img/new-clock3.png" alt="new-clock" width="215" height="234">
+                                <p>JORD AR5905</p>
+                                <p>65 000 грн.</p>
+                            </td>
+                            <td class="new-product">
+                                <img src="./img/new-clock4.png" alt="new-clock" width="215" height="234">
+                                <p>Emporio Armani Sportivo </p>
+                                <p>165 000 грн.</p>
+                            </td>
+                            <td class="new-product">
+                                <img src="./img/new-clock5.png" alt="new-clock" width="215" height="234">
+                                <p>Rolex Oyster Perpetual</p>
+                                <p>280 000 грн.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="new-product">
+                                <img src="./img/new-clock1.png" alt="new-clock" width="215" height="234">
+                                <p>Louis XVI ATHOS</p>
+                                <p>65 000 грн. </p>
+                            </td>
+                            <td class="new-product">
+                                <img src="./img/new-clock6.png" alt="new-clock" width="215" height="234">
+                                <p>U-Boat Italo Fontana</p>
+                                <p>18 700 грн. </p>
+                            </td>
+                            <td class="new-product">
+                                <img src="./img/new-clock7.png" alt="new-clock" width="215" height="234">
+                                <p>Gucci Men's G</p>
+                                <p>38 500 грн.</p>
+                            </td>
+                            <td class="new-product last-td">
+                                <a class="new-products-link" href="">ПОКАЗАТИ ВСІ</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
 
 
