add some adaptive changes

--- a/index.html
+++ b/index.html
@@ -53,18 +53,26 @@
 
     <main>
         <section class="hero">
-
-            <div class="container hero-wraper">
-                <h1 class="hero-title">PORTEN</h1>
-                <p class="hero-city">івано-франківськ</p>
+            <div class="container-fluid row">
+                <div class="container hero-wraper">
+                    <h1 class="hero-title">PORTEN</h1>
+                    <p class="hero-city">івано-франківськ</p>
+                </div>
+                <div class="container row">
+                    <p class="hero-text px-sm-5 col-sm-5">В магазинах Торговельній мережі Porten ви можете купити
+                        годинник у
+                        Бахмуті,
+                        Вінниці,
+                        Дніпрі, Житомирі,
+                        Запоріжжі, Івано-Франківську, Києві, Краматорську, Луцьку, Львові, Одесі, Покровську, Полтаві,
+                        Рівному,
+                        Слов'янську, Сумах, Тернополі, Харкові, Херсоні, Хмельницькому, Черкасах, Чернівцях, Чернігові ,
+                        а
+                        також
+                        багатьох інших містах України
+                    </p>
+                </div>
             </div>
-            <p class="hero-text px-sm-5">В магазинах Торговельній мережі Porten ви можете купити годинник у Бахмуті,
-                Вінниці,
-                Дніпрі, Житомирі,
-                Запоріжжі, Івано-Франківську, Києві, Краматорську, Луцьку, Львові, Одесі, Покровську, Полтаві, Рівному,
-                Слов'янську, Сумах, Тернополі, Харкові, Херсоні, Хмельницькому, Черкасах, Чернівцях, Чернігові , а також
-                багатьох інших містах України
-            </p>
         </section>
 
         <div class="container-fluid px-3">
@@ -245,8 +253,8 @@
 
             <ul class="container-fluid">
                 <li class="row mb-3">
-                    <img class="col-6" src="./img/Articles1.webp" alt="Articles">
-                    <div class="col-6">
+                    <img class="col-md-6 col-sm-12" src="./img/Articles1.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
                         <p class="article-text">Цей чемпіон «гіперхорології» став синонімом надмірності й завдяки своїй
                             радикальній
@@ -264,8 +272,8 @@
                     </div>
                 </li>
                 <li class="row mb-3">
-                    <img class="col-6" src="./img/Articles2.webp" alt="Articles">
-                    <div class="col-6">
+                    <img class="col-md-6 col-sm-12" src="./img/Articles2.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
                         <p class="article-text">Історія люксових годинників зародилася дуже давно, вона веде відлік із
                             часів перших
@@ -282,8 +290,8 @@
                     </div>
                 </li>
                 <li class="row">
-                    <img class="col-6" src="./img/Articles3.webp" alt="Articles">
-                    <div class="col-6">
+                    <img class="col-md-6 col-sm-12" src="./img/Articles3.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
                         <p class="article-text">На початку цього року компанія Tissot оновила модель PRS 516 Automatic
                             Chronograph, але не
