--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <div class="container-fluid px-3">
+        <div class="container-fluid">
             <div class="row">
                 <section class="container new-seson col-md-7 col-sm-12">
                     <h2 class="section-title">СЕЗОН 2021/22</h2>
@@ -121,31 +121,38 @@
 
 
         <section class="container-fluid old-colection d-flex justify-content-center">
-            <img class="col-5" src="./img/old-colection-img.webp" alt="fashion man">
-            <div class="container old-colection-wraper">
-                <div class="row justify-content-center">
-                    <h2 class="section-title">колекція 2018</h2>
-                    <p class="old-colection-text">Годинники як інструмент визначення часу давно і надійно прижилися в
-                        людській
-                        реальності. Романтики та
-                        прагматики, художники та бізнесмени, чоловіки та жінки, дорослі та діти - всі хочуть знати котра
-                        година
-                        в потрібний момент. Скільки хвилин пройшло, скільки залишилося, а ще - які саме моделі і якого
-                        бренду
-                        виблискують на руці у друга, коханої або конкурента. З давніх часів, коли людина здогадався
-                        втикнути
-                        в
-                        землю паличку та іншою поличкою взявся відміряти рівні проміжки часу на піску, не вщухають
-                        суперечки
-                        -
-                        яким повинний бути годинник? Наручним, або настільним, або настінним, або, нарешті, підлоговим?
-                        Чому
-                        ж
-                        кожен діамантик на безеле або шестерінка в механізмі незмінно змушують гордовито випнутися нижню
-                        губу
-                        володаря аксесуара, а щоки - роздутися?</p>
+            <div class="row">
+                <img class="col-md-5 col-sm-12" src="./img/old-colection-img.webp" alt="fashion man">
+                <div class="container old-colection-wraper col-md-7">
+                    <div class="row justify-content-center">
+                        <h2 class="section-title">колекція 2018</h2>
+                        <p class="old-colection-text">Годинники як інструмент визначення часу давно і надійно прижилися
+                            в
+                            людській
+                            реальності. Романтики та
+                            прагматики, художники та бізнесмени, чоловіки та жінки, дорослі та діти - всі хочуть знати
+                            котра
+                            година
+                            в потрібний момент. Скільки хвилин пройшло, скільки залишилося, а ще - які саме моделі і
+                            якого
+                            бренду
+                            виблискують на руці у друга, коханої або конкурента. З давніх часів, коли людина здогадався
+                            втикнути
+                            в
+                            землю паличку та іншою поличкою взявся відміряти рівні проміжки часу на піску, не вщухають
+                            суперечки
+                            -
+                            яким повинний бути годинник? Наручним, або настільним, або настінним, або, нарешті,
+                            підлоговим?
+                            Чому
+                            ж
+                            кожен діамантик на безеле або шестерінка в механізмі незмінно змушують гордовито випнутися
+                            нижню
+                            губу
+                            володаря аксесуара, а щоки - роздутися?</p>
 
-                    <a class="old-colection-link col-md-3" href="#">переглянути колекцію</a>
+                        <a class="old-colection-link col-md-3" href="#">переглянути колекцію</a>
+                    </div>
                 </div>
             </div>
         </section>
