--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>LP PORTEN</title>
 </head>
@@ -151,7 +153,7 @@
                             губу
                             володаря аксесуара, а щоки - роздутися?</p>
 
-                        <a class="old-colection-link col-md-3" href="#">переглянути колекцію</a>
+                        <a class="old-colection-link col-md-5" href="#">переглянути колекцію</a>
                     </div>
                 </div>
             </div>
