--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row colextions-wrapper">
                 <section class="container new-seson col-md-7 col-sm-12">
                     <h2 class="section-title">СЕЗОН 2021/22</h2>
 
@@ -123,7 +123,7 @@
 
 
         <section class="container-fluid old-colection d-flex justify-content-center">
-            <div class="row">
+            <div class="row colextions-wrapper">
                 <img class="col-md-5 col-sm-12" src="./img/old-colection-img.webp" alt="fashion man">
                 <div class="container old-colection-wraper col-md-7">
                     <div class="row justify-content-center">
@@ -261,7 +261,7 @@
             <h2 class="section-title">Статті та корисна інформація</h2>
 
             <ul class="container-fluid">
-                <li class="row mb-3">
+                <li class="row mb-3 colextions-wrapper">
                     <img class="col-md-6 col-sm-12" src="./img/Articles1.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
@@ -280,7 +280,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="row mb-3">
+                <li class="row mb-3 colextions-wrapper">
                     <img class="col-md-6 col-sm-12" src="./img/Articles2.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="row">
+                <li class="row colextions-wrapper">
                     <img class="col-md-6 col-sm-12" src="./img/Articles3.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
