--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <nav class="navbar navbar-expand-lg col-md-11">
                     <a href="#" class="logo my-auto">PORTEN</a>
                     <ul class="navbar-nav">
-                        <li class="nav-item active align-self-center">сподобалось</li>
-                        <li class="nav-item">Особистий кабінет</li>
-                        <li class="nav-item">налаштування</li>
+                        <li class="nav-item align-self-center"><a class="nav-link active" href="#">сподобалось</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Особистий кабінет</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">налаштування</a></li>
                     </ul>
                 </nav>
                 <div class="container d-flex col-md-1">
@@ -360,8 +360,8 @@
                             <li class="col-4 mt-4"><a type="button" class="btn" href="">запонки</a></li>
                             <li class="col-4 mt-4"><a type="button" class="btn" href="">ремені</a></li>
                             <div class="row mt-4">
-                                <li class="col-4 mt-6"><a type="button" class="btn" href="">ювелірні вироби</a></li>
-                                <li class="col-4 mt-6"><a type="button" class="btn" href="">на замовлення</a></li>
+                                <li class="col-6 mt-6"><a type="button" class="btn" href="">ювелірні вироби</a></li>
+                                <li class="col-6 mt-6"><a type="button" class="btn" href="">на замовлення</a></li>
                             </div>
                             <li class="col-4 mt-3"><a type="button" class="btn" href="">браслети</a></li>
                         </ul>
