--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <div class="container d-flex row">
                 <div class="d-flex col-md-10">
                     <i class="bi bi-telephone me-3"></i>
-                    <p class="info">8 (812) 123-45-67 | Працюємо 7 днів на тиждень | 9:00 — 18:00</p>
+                    <p class="info"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a> | Працюємо 7 днів на
+                        тиждень |
+                        9:00 — 18:00</p>
                 </div>
                 <div class="d-flex col-md-2">
                     <i class="bi bi-box-arrow-in-right me-3"></i>
@@ -83,7 +85,7 @@
                     <h2 class="section-title">СЕЗОН 2021/22</h2>
 
                     <div class="container">
-                        <ul class="row">
+                        <ul class="row new-seson-list-wrapper">
                             <li class="new-seson-item col-md-4 col-sm-10">
                                 <div class="new-seson-img-wraper">
                                     <img src="./img/new-clock1.png" alt="clock 1">
@@ -153,7 +155,7 @@
                             губу
                             володаря аксесуара, а щоки - роздутися?</p>
 
-                        <a class="old-colection-link col-md-5" href="#">переглянути колекцію</a>
+                        <a class="old-colection-link col-md-5 col-sm-4" href="#">переглянути колекцію</a>
                     </div>
                 </div>
             </div>
