--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,13 +48,20 @@
 
         <div class="container d-flex">
             <div class="row">
-                <nav class="navbar navbar-expand-lg col-md-11">
+                <nav class="navbar navbar-expand-md col-md-11">
                     <a href="#" class="logo my-auto">PORTEN</a>
-                    <ul class="navbar-nav">
-                        <li class="nav-item align-self-center"><a class="nav-link active" href="#">сподобалось</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Особистий кабінет</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">налаштування</a></li>
-                    </ul>
+                    <button class="navbar-toggler bg-secondary my-3" type="button" data-toggle="collapse"
+                        data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link active" href="#">сподобалось</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Особистий кабінет</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">налаштування</a></li>
+                        </ul>
+                    </div>
                 </nav>
                 <div class="container d-flex col-md-1">
                     <i class="bi bi-cart2 align-self-center icon me-5"></i>
