--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
         <div class="container d-flex">
-            <div class="row">
+            <div class="row colextions-wrapper">
                 <nav class="navbar navbar-expand-md col-md-11">
                     <a href="#" class="logo my-auto">PORTEN</a>
                     <button class="navbar-toggler bg-secondary my-3" type="button" data-toggle="collapse"
@@ -78,7 +78,7 @@
                     <h1 class="hero-title">PORTEN</h1>
                     <p class="hero-city">івано-франківськ</p>
                 </div>
-                <div class="container row">
+                <div class="container-fluid row">
                     <p class="hero-text px-sm-5 col-sm-5">В магазинах Торговельній мережі Porten ви можете купити
                         годинник у
                         Бахмуті,
