--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
 
 <body>
     <header class="container-fluid header">
-        <section class="container-fluid pre-header d-flex justify-content-center pt-2">
+        <div class="container-fluid pre-header d-flex justify-content-center pt-2">
             <div class="container d-flex row">
                 <div class="d-flex col-md-10">
                     <i class="bi bi-telephone me-3"></i>
@@ -44,7 +44,7 @@
                     <p class="login">Вхід / Реєстрація</p>
                 </div>
             </div>
-        </section>
+        </div>
 
         <div class="container d-flex">
             <div class="row colextions-wrapper">
@@ -108,7 +108,7 @@
                                 </div>
                                 <p>Louis XVI ATHOS</p>
                                 <p>13 600 грн.</p>
-                                </img>
+
                             </li>
                             <li class="new-seson-item col-md-4 col-sm-10">
                                 <div class="new-seson-img-wraper">
@@ -116,7 +116,7 @@
                                 </div>
                                 <p>Carl von Zeyten</p>
                                 <p>Carl von Zeyten</p>
-                                </img>
+
                             </li>
                             <li class="new-seson-item col-md-4 col-sm-10">
                                 <div class="new-seson-img-wraper">
@@ -124,7 +124,7 @@
                                 </div>
                                 <p>JORD AR5905</p>
                                 <p>65 000 грн.</p>
-                                </img>
+
                             </li>
                         </ul>
                     </div>
@@ -374,14 +374,14 @@
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
                         <ul class="row">
-                            <li class="col-4 mt-4"><a type="button" class="btn" href="">годинники</a></li>
-                            <li class="col-4 mt-4"><a type="button" class="btn" href="">запонки</a></li>
-                            <li class="col-4 mt-4"><a type="button" class="btn" href="">ремені</a></li>
+                            <li class="col-4 mt-4"><a class="btn" href="">годинники</a></li>
+                            <li class="col-4 mt-4"><a class="btn" href="">запонки</a></li>
+                            <li class="col-4 mt-4"><a class="btn" href="">ремені</a></li>
                             <div class="row mt-4">
-                                <li class="col-6 mt-6"><a type="button" class="btn" href="">ювелірні вироби</a></li>
-                                <li class="col-6 mt-6"><a type="button" class="btn" href="">на замовлення</a></li>
+                                <li class="col-6 mt-6"><a class="btn" href="">ювелірні вироби</a></li>
+                                <li class="col-6 mt-6"><a class="btn" href="">на замовлення</a></li>
                             </div>
-                            <li class="col-4 mt-3"><a type="button" class="btn" href="">браслети</a></li>
+                            <li class="col-4 mt-3"><a class="btn" href="">браслети</a></li>
                         </ul>
                     </div>
                 </div>
@@ -395,7 +395,7 @@
                             дбаємо про комфорт наших покупців і постійно розширюємо можливості сервісного
                             обслуговування.
                         </p>
-                        <input class="email-input" type="email" name="" id="" placeholder="Ваша пошта">
+                        <input class="email-input" type="email" name="email" id="email-input" placeholder="Ваша пошта">
                         <button type="button" class="btn">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
