--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="hero-city">івано-франківськ</p>
                 </div>
                 <div class="container-fluid row">
-                    <p class="hero-text px-sm-5 col-sm-5">В магазинах Торговельній мережі Porten ви можете купити
+                    <p class="hero-text col-sm-5">В магазинах Торговельній мережі Porten ви можете купити
                         годинник у
                         Бахмуті,
                         Вінниці,
@@ -106,24 +106,24 @@
                                 <div class="new-seson-img-wraper">
                                     <img src="./img/new-clock1.png" alt="clock 1">
                                 </div>
-                                <p>Louis XVI ATHOS</p>
-                                <p>13 600 грн.</p>
+                                <p class="new-seson-item-name">Louis XVI ATHOS</p>
+                                <p class="new-seson-item-price">13 600 грн.</p>
 
                             </li>
                             <li class="new-seson-item col-md-4 col-sm-10">
                                 <div class="new-seson-img-wraper">
                                     <img src="./img/new-clock2.png" alt="clock 1">
                                 </div>
-                                <p>Carl von Zeyten</p>
-                                <p>Carl von Zeyten</p>
+                                <p class="new-seson-item-name">Carl von Zeyten</p>
+                                <p class="new-seson-item-price">16 500 грн. </p>
 
                             </li>
                             <li class="new-seson-item col-md-4 col-sm-10">
                                 <div class="new-seson-img-wraper">
                                     <img src="./img/new-clock3.png" alt="clock 1">
                                 </div>
-                                <p>JORD AR5905</p>
-                                <p>65 000 грн.</p>
+                                <p class="new-seson-item-name">JORD AR5905</p>
+                                <p class="new-seson-item-price">65 000 грн.</p>
 
                             </li>
                         </ul>
@@ -142,11 +142,12 @@
 
         <section class="container-fluid old-colection d-flex justify-content-center">
             <div class="row colextions-wrapper">
-                <img class="col-md-5 col-sm-12" src="./img/old-colection-img.webp" alt="fashion man">
+                <img class="col-md-5 col-sm-12 p-0" src="./img/old-colection-img.webp" alt="fashion man">
                 <div class="container old-colection-wraper col-md-7">
                     <div class="row justify-content-center">
                         <h2 class="section-title">колекція 2018</h2>
-                        <p class="old-colection-text">Годинники як інструмент визначення часу давно і надійно прижилися
+                        <p class="old-colection-text p-0">Годинники як інструмент визначення часу давно і надійно
+                            прижилися
                             в
                             людській
                             реальності. Романтики та
@@ -229,44 +230,70 @@
                     <tbody class="container new-product-list">
                         <tr>
                             <td class="new-product">
-                                <img src="./img/new-clock2.png" alt="new-clock" width="215" height="234">
-                                <p>Carl von Zeyten</p>
-                                <p>16 500 грн.</p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock2.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">Carl von Zeyten</p>
+                                <p class="new-seson-item-price">16 500 грн.</p>
                             </td>
                             <td class="new-product">
-                                <img src="./img/new-clock3.png" alt="new-clock" width="215" height="234">
-                                <p>JORD AR5905</p>
-                                <p>65 000 грн.</p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">JORD AR5905</p>
+                                <p class="new-seson-item-price">65 000 грн.</p>
                             </td>
                             <td class="new-product">
-                                <img src="./img/new-clock4.png" alt="new-clock" width="215" height="234">
-                                <p>Emporio Armani Sportivo </p>
-                                <p>165 000 грн.</p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock4.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">Emporio Armani Sportivo </p>
+                                <p class="new-seson-item-price">165 000 грн.</p>
                             </td>
                             <td class="new-product">
-                                <img src="./img/new-clock5.png" alt="new-clock" width="215" height="234">
-                                <p>Rolex Oyster Perpetual</p>
-                                <p>280 000 грн.</p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock5.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">Rolex Oyster Perpetual</p>
+                                <p class="new-seson-item-price">280 000 грн.</p>
                             </td>
                         </tr>
                         <tr>
                             <td class="new-product">
-                                <img src="./img/new-clock1.png" alt="new-clock" width="215" height="234">
-                                <p>Louis XVI ATHOS</p>
-                                <p>65 000 грн. </p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock1.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">Louis XVI ATHOS</p>
+                                <p class="new-seson-item-price">65 000 грн. </p>
                             </td>
                             <td class="new-product">
-                                <img src="./img/new-clock6.png" alt="new-clock" width="215" height="234">
-                                <p>U-Boat Italo Fontana</p>
-                                <p>18 700 грн. </p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock6.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">U-Boat Italo Fontana</p>
+                                <p class="new-seson-item-price">18 700 грн. </p>
                             </td>
                             <td class="new-product">
-                                <img src="./img/new-clock7.png" alt="new-clock" width="215" height="234">
-                                <p>Gucci Men's G</p>
-                                <p>38 500 грн.</p>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock7.png" alt="new-clock" width="215"
+                                        height="234">
+                                </div>
+                                <p class="new-seson-item-name">Gucci Men's G</p>
+                                <p class="new-seson-item-price">38 500 грн.</p>
                             </td>
                             <td class="new-product last-td">
-                                <a class="new-products-link" href="">ПОКАЗАТИ ВСІ</a>
+                                <div class="new-product-img-wrap">
+                                    <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
+                                        height="234">
+
+                                </div>
+                                <a class="all-products" href="">ПОКАЗАТИ ВСІ</a>
                             </td>
                         </tr>
                     </tbody>
@@ -280,7 +307,7 @@
 
             <ul class="container-fluid">
                 <li class="row mb-3 colextions-wrapper">
-                    <img class="col-md-6 col-sm-12" src="./img/Articles1.webp" alt="Articles">
+                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles1.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
                         <p class="article-text">Цей чемпіон «гіперхорології» став синонімом надмірності й завдяки своїй
@@ -299,7 +326,7 @@
                     </div>
                 </li>
                 <li class="row mb-3 colextions-wrapper">
-                    <img class="col-md-6 col-sm-12" src="./img/Articles2.webp" alt="Articles">
+                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles2.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
                         <p class="article-text">Історія люксових годинників зародилася дуже давно, вона веде відлік із
@@ -317,7 +344,7 @@
                     </div>
                 </li>
                 <li class="row colextions-wrapper">
-                    <img class="col-md-6 col-sm-12" src="./img/Articles3.webp" alt="Articles">
+                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles3.webp" alt="Articles">
                     <div class="col-md-6 col-sm-12">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
                         <p class="article-text">На початку цього року компанія Tissot оновила модель PRS 516 Automatic
@@ -373,21 +400,21 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
-                        <ul class="row">
-                            <li class="col-4 mt-4"><a class="btn" href="">годинники</a></li>
-                            <li class="col-4 mt-4"><a class="btn" href="">запонки</a></li>
-                            <li class="col-4 mt-4"><a class="btn" href="">ремені</a></li>
+                        <ul class="row p-0">
+                            <li class="col-4 "><a class="btn" href="">годинники</a></li>
+                            <li class="col-4"><a class="btn" href="">запонки</a></li>
+                            <li class="col-4"><a class="btn" href="">ремені</a></li>
                             <div class="row mt-4">
-                                <li class="col-6 mt-6"><a class="btn" href="">ювелірні вироби</a></li>
-                                <li class="col-6 mt-6"><a class="btn" href="">на замовлення</a></li>
+                                <li class="col-6 mt-6 pe-0"><a class="btn" href="">ювелірні вироби</a></li>
+                                <li class="col-6 mt-6 "><a class="btn" href="">на замовлення</a></li>
                             </div>
                             <li class="col-4 mt-3"><a class="btn" href="">браслети</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-sm-12">
-                    <div class="container">
+                <div class="col-md-4 col-sm-12 pe-0">
+                    <div class="container p-0">
                         <h3 class="footer-section-title">розсилка</h3>
                         <p class="footer-section-text">Компанія пропонує тільки оригінальну продукцію від найвідоміших
                             світових брендів за найкращою
