--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <header class="container-fluid header">
         <div class="container-fluid pre-header d-flex justify-content-center pt-2">
             <div class="container d-flex row">
-                <div class="d-flex col-md-10">
+                <div class="d-flex col-md-10 p-0">
                     <i class="bi bi-telephone me-3"></i>
-                    <p class="info"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a> | Працюємо 7 днів на
+                    <p class="info"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a>| Працюємо 7 днів на
                         тиждень |
                         9:00 — 18:00</p>
                 </div>
-                <div class="d-flex col-md-2">
-                    <i class="bi bi-box-arrow-in-right me-3"></i>
+                <div class="d-flex col-md-2 p-0 login-wrap">
+                    <i class="bi bi-box-arrow-in-right login-icon"></i>
                     <p class="login">Вхід / Реєстрація</p>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="container d-flex col-md-1">
+                <div class="container d-flex col-md-1 p-0">
                     <i class="bi bi-cart2 align-self-center icon me-5"></i>
                     <i class="bi bi-search align-self-center icon"></i>
                 </div>
@@ -306,11 +306,12 @@
             <h2 class="section-title">Статті та корисна інформація</h2>
 
             <ul class="container-fluid">
-                <li class="row mb-3 colextions-wrapper">
-                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles1.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12">
+                <li class="row mb-3 colextions-wrapper ms-0">
+                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles1.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12 p-0">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
-                        <p class="article-text">Цей чемпіон «гіперхорології» став синонімом надмірності й завдяки своїй
+                        <p class="article-text pe-3">Цей чемпіон «гіперхорології» став синонімом надмірності й завдяки
+                            своїй
                             радикальній
                             скелетонізованій архітектурі неодноразово демонструє пристрасть до годинного вуайєризму. У
                             цій
@@ -325,11 +326,12 @@
                         </div>
                     </div>
                 </li>
-                <li class="row mb-3 colextions-wrapper">
-                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles2.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12">
+                <li class="row mb-3 colextions-wrapper ms-0">
+                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles2.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12 p-0">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
-                        <p class="article-text">Історія люксових годинників зародилася дуже давно, вона веде відлік із
+                        <p class="article-text pe-3">Історія люксових годинників зародилася дуже давно, вона веде відлік
+                            із
                             часів перших
                             годинників у
                             світі. Тоді годинник був розкішшю, яку могла собі дозволити лише найвища еліта суспільства.
@@ -339,15 +341,16 @@
 
                         <div class="d-flex justify-content-between px-3 pt-5">
                             <a class="new-products-link" href="">читати</a>
-                            <p>#ЕКСКЛЮЗИВ #IСТОРIЯ</p>
+                            <p class="hashtags">#ЕКСКЛЮЗИВ #IСТОРIЯ</p>
                         </div>
                     </div>
                 </li>
-                <li class="row colextions-wrapper">
-                    <img class="col-md-6 col-sm-12 ps-0" src="./img/Articles3.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12">
+                <li class="row colextions-wrapper ms-0">
+                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles3.webp" alt="Articles">
+                    <div class="col-md-6 col-sm-12 p-0">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
-                        <p class="article-text">На початку цього року компанія Tissot оновила модель PRS 516 Automatic
+                        <p class="article-text pe-3">На початку цього року компанія Tissot оновила модель PRS 516
+                            Automatic
                             Chronograph, але не
                             пішла
                             вінтажним шляхом. На противагу колекції Heritage із переконливими рімейками вінтажних
@@ -358,7 +361,7 @@
 
                         <div class="d-flex justify-content-between px-3 pt-5">
                             <a class="new-products-link" href="">читати</a>
-                            <p>#ХРОНОГРАФ #TISSOT #ОГЛЯДГОДИННИКIВ</p>
+                            <p class="hashtags">#ХРОНОГРАФ #TISSOT #ОГЛЯДГОДИННИКIВ</p>
                         </div>
                     </div>
                 </li>
@@ -368,7 +371,7 @@
         <section class="containet partners">
             <h2 class="section-title">Наші партнери</h2>
             <div class="container partners-list">
-                <ul class="row justify-content-between">
+                <ul class="row justify-content-between m-0">
                     <li class="col-3 partner-logo"><img src="./img/partner1.png" alt="partner logo" width="250"></li>
                     <li class="col-3 partner-logo"><img src="./img/partner2.png" alt="partner logo" width="250"></li>
                     <li class="col-2 partner-logo"><img src="./img/partner3.png" alt="partner logo" width="250"></li>
