--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="container d-flex">
-            <div class="row colextions-wrapper">
+            <div class="row colextions-wrapper m-0">
                 <nav class="navbar navbar-expand-md col-md-11">
                     <a href="#" class="logo my-auto">PORTEN</a>
                     <button class="navbar-toggler bg-secondary my-3" type="button" data-toggle="collapse"
