--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             </div>
         </div>
 
-        <div class="container d-flex">
+        <div class="container">
             <div class="row colextions-wrapper m-0">
-                <nav class="navbar navbar-expand-md col-md-11">
-                    <a href="#" class="logo my-auto">PORTEN</a>
+                <nav class="navbar navbar-expand-md">
+                    <a href="#" class="logo col-lg-6 col-md-3 col-sm-3">PORTEN</a>
                     <button class="navbar-toggler bg-secondary my-3" type="button" data-toggle="collapse"
                         data-target="#collapsibleNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <div class="collapse navbar-collapse col-lg-4 col-md-3" id="collapsibleNavbar">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link active" href="#">сподобалось</a>
                             </li>
@@ -62,11 +62,12 @@
                             <li class="nav-item"><a class="nav-link" href="#">налаштування</a></li>
                         </ul>
                     </div>
+
+                    <div class="container d-flex col-md-1 p-0 m-0 mb-md-0 mb-sm-3">
+                        <i class="bi bi-cart2 align-self-center icon me-5"></i>
+                        <i class="bi bi-search align-self-center icon"></i>
+                    </div>
                 </nav>
-                <div class="container d-flex col-md-1 p-0">
-                    <i class="bi bi-cart2 align-self-center icon me-5"></i>
-                    <i class="bi bi-search align-self-center icon"></i>
-                </div>
             </div>
         </div>
     </header>
@@ -96,30 +97,30 @@
         </section>
 
         <div class="container-fluid">
-            <div class="row colextions-wrapper">
-                <section class="container new-seson col-md-7 col-sm-12">
+            <div class="row colextions-wrapper m-0">
+                <section class="container new-seson col-lg-7 col-md-12 col-sm-12">
                     <h2 class="section-title">СЕЗОН 2021/22</h2>
 
                     <div class="container">
                         <ul class="row new-seson-list-wrapper">
-                            <li class="new-seson-item col-md-4 col-sm-10">
-                                <div class="new-seson-img-wraper">
+                            <li class="new-seson-item col-lg-4 col-sm-6">
+                                <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock1.png" alt="clock 1">
                                 </div>
                                 <p class="new-seson-item-name">Louis XVI ATHOS</p>
                                 <p class="new-seson-item-price">13 600 грн.</p>
 
                             </li>
-                            <li class="new-seson-item col-md-4 col-sm-10">
-                                <div class="new-seson-img-wraper">
+                            <li class="new-seson-item col-lg-4 col-sm-6">
+                                <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock2.png" alt="clock 1">
                                 </div>
                                 <p class="new-seson-item-name">Carl von Zeyten</p>
                                 <p class="new-seson-item-price">16 500 грн. </p>
 
                             </li>
-                            <li class="new-seson-item col-md-4 col-sm-10">
-                                <div class="new-seson-img-wraper">
+                            <li class="new-seson-item col-lg-4 col-sm-6 mt-md-0 mt-sm-5">
+                                <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock3.png" alt="clock 1">
                                 </div>
                                 <p class="new-seson-item-name">JORD AR5905</p>
@@ -130,7 +131,7 @@
                     </div>
                 </section>
 
-                <section class="container new-colection col-md-5 col-sm-12">
+                <section class="container new-colection col-lg-5 col-md-12 col-sm-12">
                     <div class="container new-colection-wraper pb-5">
                         <h2 class="section-title">Нова колекція</h2>
                         <a class="new-colection-link" href="#">Каталог</a>
@@ -141,7 +142,7 @@
 
 
         <section class="container-fluid old-colection d-flex justify-content-center">
-            <div class="row colextions-wrapper">
+            <div class="row colextions-wrapper m-0">
                 <img class="col-md-5 col-sm-12 p-0" src="./img/old-colection-img.webp" alt="fashion man">
                 <div class="container old-colection-wraper col-md-7">
                     <div class="row justify-content-center">
@@ -225,7 +226,7 @@
                 </li>
             </ul> -->
 
-            <div class="table-responsive-md">
+            <div class="container table-responsive-lg table-responsive-xl m-0">
                 <table class="table">
                     <tbody class="container new-product-list">
                         <tr>
@@ -291,7 +292,6 @@
                                 <div class="new-product-img-wrap">
                                     <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
                                         height="234">
-
                                 </div>
                                 <a class="all-products" href="">ПОКАЗАТИ ВСІ</a>
                             </td>
@@ -308,9 +308,10 @@
             <ul class="container-fluid">
                 <li class="row mb-3 colextions-wrapper ms-0">
                     <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles1.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-0">
+                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
-                        <p class="article-text pe-3">Цей чемпіон «гіперхорології» став синонімом надмірності й завдяки
+                        <p class="article-text pe-md-3">Цей чемпіон «гіперхорології» став синонімом надмірності й
+                            завдяки
                             своїй
                             радикальній
                             скелетонізованій архітектурі неодноразово демонструє пристрасть до годинного вуайєризму. У
@@ -328,7 +329,7 @@
                 </li>
                 <li class="row mb-3 colextions-wrapper ms-0">
                     <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles2.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-0">
+                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
                         <p class="article-text pe-3">Історія люксових годинників зародилася дуже давно, вона веде відлік
                             із
@@ -347,7 +348,7 @@
                 </li>
                 <li class="row colextions-wrapper ms-0">
                     <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles3.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-0">
+                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
                         <p class="article-text pe-3">На початку цього року компанія Tissot оновила модель PRS 516
                             Automatic
@@ -371,7 +372,7 @@
         <section class="containet partners">
             <h2 class="section-title">Наші партнери</h2>
             <div class="container partners-list">
-                <ul class="row justify-content-between m-0">
+                <ul class="row justify-content-between p-0 m-0">
                     <li class="col-3 partner-logo"><img src="./img/partner1.png" alt="partner logo" width="250"></li>
                     <li class="col-3 partner-logo"><img src="./img/partner2.png" alt="partner logo" width="250"></li>
                     <li class="col-2 partner-logo"><img src="./img/partner3.png" alt="partner logo" width="250"></li>
@@ -404,14 +405,14 @@
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
                         <ul class="row p-0">
-                            <li class="col-4 "><a class="btn" href="">годинники</a></li>
-                            <li class="col-4"><a class="btn" href="">запонки</a></li>
-                            <li class="col-4"><a class="btn" href="">ремені</a></li>
+                            <li class="col-md-4 col-sm-3"><a class="btn" href="">годинники</a></li>
+                            <li class="col-md-4 col-sm-3"><a class="btn" href="">запонки</a></li>
+                            <li class="col-md-4 col-sm-3"><a class="btn" href="">ремені</a></li>
                             <div class="row mt-4">
-                                <li class="col-6 mt-6 pe-0"><a class="btn" href="">ювелірні вироби</a></li>
-                                <li class="col-6 mt-6 "><a class="btn" href="">на замовлення</a></li>
+                                <li class="col-md-6 col-sm-4 mt-6 pe-0"><a class="btn" href="">ювелірні вироби</a></li>
+                                <li class="col-md-6 col-sm-4 mt-6 "><a class="btn" href="">на замовлення</a></li>
                             </div>
-                            <li class="col-4 mt-3"><a class="btn" href="">браслети</a></li>
+                            <li class="col-md-4 mt-3"><a class="btn" href="">браслети</a></li>
                         </ul>
                     </div>
                 </div>
