--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <header class="container-fluid header">
         <div class="container-fluid pre-header d-flex justify-content-center">
             <div class="container d-flex my-3 row">
-                <div class="d-flex col-md-9 p-0">
+                <div class="d-flex col-lg-10 col-md-9 p-0">
                     <i class="bi bi-telephone me-3"></i>
                     <p class="info m-0"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a>| Працюємо 7 днів на
                         тиждень |
                         9:00 — 18:00</p>
                 </div>
-                <div class="d-flex col-md-3 p-0 login-wrap ps-lg-4 ps-md-0">
+                <div class="d-flex col-lg-2 col-md-3 p-0 login-wrap ps-lg-4 ps-md-0">
                     <i class="bi bi-box-arrow-in-right login-icon"></i>
                     <p class="login m-0">Вхід / Реєстрація</p>
                 </div>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row colextions-wrapper m-0">
                 <nav class="navbar navbar-expand-md">
-                    <a href="#" class="logo col-lg-5 col-md-3 col-sm-3">
+                    <a href="#" class="logo col-lg-6 col-md-3 col-sm-3">
                         <!-- PORTEN -->
                         <img src="./img/PORTEN.png" alt="logo" width="104">
                     </a>
